# UPR

kelvin/apple_watch_developers/: aw.tga  colorPalete.c  main  main.c  shape.c  shape.h  tga.c  tga.h
kelvin/davkove_zpracovani_znamek/: main  main.c
kelvin/drawingTGA/: CMakeLists.txt  README.md  colorPalete.c  colorPalete.h  configure.h  main.c  shape.c  shape.h  tga.c  tga.h  utils.c  utils.h
kelvin/k04_dynamicka_alokace_pameti/: main  main.c
kelvin/kruh_v_kruhu_circle_in_circle/: 1.stdin  2.stdin  main  main.c
kelvin/obvod_kruhu_Circle_Circumference/: 1.stdin  2.stdin  main  main.c
kelvin/retezce_znaku/: 6.stdin  main.c
kelvin/softmax/: main  main.c  softmax
kelvin/test/: 4_random_test.input.txt  main  main.c
strucnaOpora/: argv_c.c  assert  assert.c  drawCircle.c  drawTriangle.c  files.c  nacteniRadku  nacteniRadku.c  nacteniZnaku  nacteniZnaku.c  scanf  scanf.c  vyuzitiUkazatelu  vyuzitiUkazatelu.c
strucnaOpora/tga_draw/: aw.tga  colorPalete.h  main  main.c  shape.h  utils.h
strucnaOpora/tga_pic/: main  main.c
tga_vsc_full/: main  main.c  test.tga  utils.c  utils.h
tutorial_04_vsc/: array.c  array.h  array.txt  main  main.c
ukoly/: arrays  arrays.c  basics  basics.c  pointers  pointers.c  strings  strings.c  structures  structures.c
